# realtime-room-monitor

./: README.md  pyproject.toml
agent-console/: package-lock.json  package.json
agent-console/app/: globals.css  layout.tsx  page.tsx
agent-console/app/_components/: connection-button.tsx  console-container.tsx  control-bar.tsx  level-filter.tsx  livekit-state-tabs.tsx  log-item.tsx  participant-action-panel.tsx  participant-track-viewer.tsx  participant-viewer.tsx  remote-participants-viewer.tsx  room-state-viewer.tsx  server-action-panel.tsx  track-viewer.tsx  video-conference.tsx  video-grid-section.tsx
agent-console/app/api/connection-details/: route.ts
agent-console/app/api/room/mute-track/: route.ts
agent-console/app/api/token/: route.ts
agent-console/app/room/: layout.tsx  page.tsx
agent-console/components/: action-card.tsx  collapsible-section.tsx  json-editor.tsx  json-preview.tsx  lk.tsx  metric-badge.tsx  observable-wrapper.tsx  theme-picker.tsx  theme-switch.tsx
agent-console/hooks/: use-credentials.tsx  use-livekit.tsx  use-logger.tsx
agent-console/hooks/use-livekit/: use-conn-details.tsx  use-livekit-action.tsx  use-livekit-events.tsx  use-livekit-state.tsx
agent-console/lib/: constants.ts  event-definitions.tsx  event-registry.tsx  event-types.ts  livekit-utils.ts  utils.ts
agent-console/providers/: LivekitEventInstrumentor.tsx
app/: globals.css
python/: Makefile  pyproject.toml
python/voxant/graph/: constants.py  context.py  executor.py  types.py  utils.py
python/voxant/graph/func/: __init__.py  background.py  step.py  workflow.py
(+4 files in other folders)
