[tool.poetry]
name = "voxant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
livekit-agents = "^0.12.12"
langgraph = "^0.2.71"
langchain-core = "^0.3.34"
python-dotenv = "^1.0.1"
livekit-plugins-deepgram = "^0.6.19"
livekit-plugins-openai = "^0.10.19"
livekit-plugins-silero = "^0.7.4"
livekit-plugins-turn-detector = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
